Bug 688126 - nsIAccessibleText::setSelectionBounds doesn't fire text selection changed events in some cases, r=marcoz, sr=smaug