accessible/src/xul/nsXULFormControlAccessible.h
@@ -276,6 +276,9 @@ protected:
   // nsAccessible
   virtual void CacheChildren();
 
+  // nsHyperTextAccessible
+  virtual already_AddRefed<nsFrameSelection> FrameSelection();
+
   // nsXULTextFieldAccessible
   already_AddRefed<nsIContent> GetInputField() const;
 };
